--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -3,7 +3,7 @@ services:
   web:
     image: eboraas/apache
     volumes:
-      - .:/var/www/html//
+      - .:/var/www/html/
       - c:\Users\docker:/var/www/html/
     ports:
       - 80:80
